# rs-cry

./: Cargo.toml  prova.enc.txt  ruts_wind
src/: cry.rs  life.rs  main.rs
test/: prova.txt
