[package]
name = "ruts_wind"
version = "0.1.0"
authors = ["Giacomo Rizzi <gufoes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# encryptfile = "*"
rust-crypto = "*"
rustc-serialize = "*"
rand = "0.6.5"
num-bigint-dig = "0.4.0"
# http_req = "*"
# sodiumoxide = "*"
rsa = "*"
dialog = "0.2.1"
# aes = "*"
# curl = "*"
# minreq = { version = "*", features = ["https"] }

# libc = "*"



[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
